--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,10 +4,41 @@
     <meta http-equiv="Content-language" content="en">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width">
     <title>{% block title %}Tools still running on Precise{% endblock %}</title>
+    <style>
+    /* http://meyerweb.com/eric/tools/css/reset/
+      v2.0 | 20110126
+      License: none (public domain)
+    */
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+    article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block;}
+    body {line-height:1;}
+    ol, ul {list-style:none;}
+    blockquote, q {quotes:none;}
+    blockquote:before, blockquote:after, q:before, q:after {content:'';content:none;}
+    </style>
+    <style>
+      body {background:#fefefe;color:#333;padding:.5em;}
+      h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
+      table {border-collapse:collapse;}
+      th, td {border-bottom:1px solid #ddd;}
+      th {background-color:#900;color:#eee;}
+      tr:nth-child(even) {background-color:#f2f2f2;}
+      td {vertical-align:top;}
+      td.tool-name {font-weight:bold;}
+      td.seen {text-align:right;}
+      footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
+      #powered-by {float:left;}
+    </style>
   </head>
   <body>
     {% block body %}{% endblock %}
+    <footer>
+      <div id="powered-by">
+        <img src="https://tools-static.wmflabs.org/static/logos/powered-by-tool-labs.png" alt="Powered by Wikimedia Tool Labs">
+      </div>
+      <a id="source" href="https://phabricator.wikimedia.org/source/tool-precise-tools/">view source</a>
+    </footer>
   </body>
 </html>
