--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,13 +21,14 @@
     <style>
       body {background:#fefefe;color:#333;padding:.5em;}
       h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
-      table {border-collapse:collapse;}
-      th, td {border-bottom:1px solid #ddd;}
-      th {background-color:#900;color:#eee;}
+      table {border-collapse:collapse;border:1px solid #ddd;}
+      th, td {border-bottom:1px solid #ddd;padding:.5em;}
+      th {background-color:#900;color:#eee;border:1px solid #ddd;}
       tr:nth-child(even) {background-color:#f2f2f2;}
       td {vertical-align:top;}
-      td.tool-name {font-weight:bold;}
+      td.tool-name {font-weight:bold;background-color:#fefefe;}
       td.seen {text-align:right;}
+      #precise {margin:auto;}
       footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
       #powered-by {float:left;}
     </style>
