--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
     <style>
       body {background:#fefefe;color:#333;padding:.5em;}
       h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
+      p {margin:0 auto 1em;}
       table {border-collapse:collapse;border:1px solid #ddd;}
       th, td {border-bottom:1px solid #ddd;padding:.5em;}
       th {background-color:#900;color:#eee;border:1px solid #ddd;}
