center and bold styling for header messages

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 <p>See <a href="https://wikitech.wikimedia.org/wiki/Tools_Precise_deprecation">Tools Precise deprecation</a> for information on migrating your tool off of Precise before the 2017-03-06 deadline.</p>
 
-<p>Total tools still running on Precise: <strong>{{ tools|count }}</strong></p>
+<p>Total tools still running on Precise: <var>{{ tools|count }}</var></p>
 
 <table id="precise">
   <thead>
