--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         {% if not loop.first %}<tr>{% endif %}
         <td class="job-name">{{ job }}</td>
         <td class="seen">{{ data.count }}</td>
-        <td class="last">{{ data.last.strftime('%Y-%m-%d %H:%M') }}</td>
+        <td class="last">{{ data.last }}</td>
         {% if not loop.last %}</tr>{% endif %}
       {% endfor %}
     </tr>
