--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,7 @@
       td.tool-name {font-weight:bold;background-color:#fefefe;}
       td.seen {text-align:right;}
       #precise {margin:auto;}
+      .members li {display:inline;}
       footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
       #powered-by {float:left;}
     </style>
