Add a link to contact tool for each maintainer
So that we can know how to contact a person. Eg. SUL account name,
phab account name.

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
           members:
           <ul>
             {% for member in tool_data.members %}
-            <li>{{ member }}</li>
+            <li><a href="//tools.wmflabs.org/contact/search/{{ member|urlencode }}">{{ member }}</a></li>
             {% endfor %}
           </ul>
         </div>
