Pretty up member list with some CSS

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,10 +28,14 @@
       th {background-color:#900;color:#eee;border:1px solid #ddd;}
       tr:nth-child(even) {background-color:#f2f2f2;}
       td {vertical-align:top;}
-      td.tool-name {font-weight:bold;background-color:#fefefe;}
+      td.tool-name {font-weight:bold;background-color:#fefefe;max-width:30ch;}
       td.seen {text-align:right;}
       #precise {margin:auto;}
-      .members li {display:inline;}
+      .members {font-weight:normal;}
+      .members li {display:inline;font-size:smaller;}
+      .members li:after {content:", ";}
+      .members li:last-child:after {content:", ";}
+      .members li a {color:#339;}
       footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
       #powered-by {float:left;}
     </style>
