Fix trailing commas in members list

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
       .members {font-weight:normal;}
       .members li {display:inline;font-size:smaller;}
       .members li:after {content:", ";}
-      .members li:last-child:after {content:", ";}
+      .members li:last-child:after {content:"";}
       .members li a {color:#339;}
       footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
       #powered-by {float:left;}
