Indent members list

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,6 +32,7 @@
       td.seen {text-align:right;}
       #precise {margin:auto;}
       .members {font-weight:normal;}
+      .members ul {padding-left:1em;}
       .members li {display:inline;font-size:smaller;}
       .members li:after {content:", ";}
       .members li:last-child:after {content:"";}
