Give members a bit of vertical offset

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
       td.tool-name {font-weight:bold;background-color:#fefefe;max-width:30ch;}
       td.seen {text-align:right;}
       #precise {margin:auto;}
-      .members {font-weight:normal;}
+      .members {font-weight:normal;margin-top:.25em;}
       .members ul {padding-left:1em;}
       .members li {display:inline;font-size:smaller;}
       .members li:after {content:", ";}
