home.html: Make it clear that 'Last seen' is exit time
A lot of us (including me) naturally think it's starting time :)

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
       <th>Tool</th>
       <th>Job</th>
       <th>Total seen</th>
-      <th>Last seen</th>
+      <th>Last seen (exit)</th>
     </tr>
   </thead>
   <tbody>
