--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
     <style>
       body {background:#fefefe;color:#333;padding:.5em;}
       h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
+      h2 {color:#900;font-size:1.5em;padding:.5em;text-align:center;}
       p {margin-bottom:1em;text-align:center;}
       var {font-weight:bold;}
       table {border-collapse:collapse;border:1px solid #ddd;}
