Update HTML for use as trusty-tools
No official deadline yet, but there is a draft announce page on wikitech
to link to.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Tools running jobs on Precise OGE hosts in last 7 days</h1>
+<h1>Tools running jobs on Trusty grid engine in last 7 days</h1>
 
-<p>See <a href="https://wikitech.wikimedia.org/wiki/Tools_Precise_deprecation">Tools Precise deprecation</a> for information on migrating your tool off of Precise before the <a href="https://lists.wikimedia.org/pipermail/labs-announce/2017-March/000214.html">2017-03-14 deadline</a>.</p>
+<p>See <a href="https://wikitech.wikimedia.org/wiki/News/Toolforge_Trusty_deprecation">Toolforge Trusty deprecation</a> for information on migrating your tool off of Trusty before the deadline.</p>
 
-<p>Total tools still running on Precise: <var>{{ tools|count }}</var></p>
+<p>Total tools still running on Trusty: <var>{{ tools|count }}</var></p>
 <p>Last updated: <var>{{ generated }}</var></p>
 
 <table id="precise">
@@ -20,12 +20,12 @@
     {% for tool_name, tool_data in tools|dictsort %}
     <tr>
       <td rowspan="{{ tool_data.jobs|count }}" id="{{ tool_name }}" class="tool-name">
-        <a href="//tools.wmflabs.org/?tool={{ tool_name|urlencode }}">{{ tool_name }}</a>
+        <a href="https://tools.wmflabs.org/admin/tool/{{ tool_name|urlencode }}">{{ tool_name }}</a>
         <div class='members'>
           members:
           <ul>
             {% for member in tool_data.members %}
-            <li><a href="//tools.wmflabs.org/contact/search/{{ member|urlencode }}">{{ member }}</a></li>
+            <li><a href="https://tools.wmflabs.org/contact/search/{{ member|urlencode }}">{{ member }}</a></li>
             {% endfor %}
           </ul>
         </div>
