--- a/templates/tool.html
+++ b/templates/tool.html
@@ -17,12 +17,12 @@
     {% for tool_name, tool_data in tools|dictsort %}
     <tr>
       <td rowspan="{{ tool_data.jobs|count }}" id="{{ tool_name }}" class="tool-name">
-        <a href="https://tools.wmflabs.org/admin/tool/{{ tool_name|urlencode }}">{{ tool_name }}</a>
+        {{ tool_name }}
         <div class='members'>
           members:
           <ul>
             {% for member in tool_data.members %}
-            <li><a href="https://tools.wmflabs.org/contact/search/{{ member|urlencode }}">{{ member }}</a></li>
+            <li><a href="{{ url_for('user', user=member) }}">{{ member }}</a></li>
             {% endfor %}
           </ul>
         </div>
