--- a/templates/user.html
+++ b/templates/user.html
@@ -18,12 +18,16 @@
     {% for tool_name, tool_data in tools|dictsort %}
     <tr>
       <td rowspan="{{ tool_data.jobs|count }}" id="{{ tool_name }}" class="tool-name">
-        <a href="https://tools.wmflabs.org/admin/tool/{{ tool_name|urlencode }}">{{ tool_name }}</a>
+        <a href="{{ url_for('tool', name=tool_name) }}">{{ tool_name }}</a>
         <div class='members'>
           members:
           <ul>
             {% for member in tool_data.members %}
-            <li><a href="https://tools.wmflabs.org/contact/search/{{ member|urlencode }}">{{ member }}</a></li>
+            {% if member == user %}
+            <strong>{{ member }}</strong>
+            {% else %}
+            <li><a href="{{ url_for('user', user=member) }}">{{ member }}</a></li>
+            {% endif %}
             {% endfor %}
           </ul>
         </div>
