Update for Stretch
Bug: T280037

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Tools running jobs on Trusty grid engine in last 7 days</h1>
+<h1>Tools running jobs on Stretch grid engine in last 7 days</h1>
 
-<p>See <a href="https://wikitech.wikimedia.org/wiki/News/Toolforge_Trusty_deprecation">Toolforge Trusty deprecation</a> for information on migrating your tool off of Trusty before the deadline.</p>
+<p>See <a href="https://wikitech.wikimedia.org/wiki/News/Toolforge_Stretch_deprecation">Toolforge Stretch deprecation</a> for information on migrating your tool off of Stretch before the deadline.</p>
 
-<p>Total tools still running on Trusty: <var>{{ tools|count }}</var></p>
+<p>Total tools still running on Stretch: <var>{{ tools|count }}</var></p>
 <p>Last updated: <var>{{ generated }}</var></p>
 
 <table id="precise">
