--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width">
-    <title>{% block title %}Tools still running on Trusty{% endblock %}</title>
+    <title>{% block title %}Tools still running on Stretch{% endblock %}</title>
     <style>
     /* http://meyerweb.com/eric/tools/css/reset/
       v2.0 | 20110126
@@ -46,7 +46,7 @@
     {% block body %}{% endblock %}
     <footer>
       <div id="powered-by">
-        <img src="https://tools-static.wmflabs.org/static/logos/powered-by-tool-labs.png" alt="Powered by Wikimedia Tool Labs">
+        <img src="https://tools-static.wmflabs.org/static/logos/powered-by-tool-labs.png" alt="Powered by Wikimedia Toolforge">
       </div>
       <a id="source" href="https://phabricator.wikimedia.org/source/tool-precise-tools/">view source</a>
     </footer>
