--- a/templates/tool.html
+++ b/templates/tool.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>{{name}} jobs on Trusty grid engine in last 7 days</h1>
+<h1>{{name}} jobs on Stretch grid engine in last 7 days</h1>
 
 <p>Last updated: <var>{{ generated }}</var></p>
 
