--- a/templates/tool.html
+++ b/templates/tool.html
@@ -2,6 +2,12 @@
 {% block body %}
 <h1>{{name}} jobs on the grid engine in last 7 days</h1>
 
+<p>
+  <strong>The Toolforge Grid Engine is deprecated and planned to be shut down in early 2024.</strong>
+  You should migrate any tools still running on the Grid Engine to newer runtimes.
+  For details, see <a href="https://wikitech.wikimedia.org/wiki/News/Toolforge_Grid_Engine_deprecation">News/Toolforge Grid Engine deprecation.</a>
+</p>
+
 <p>Last updated: <var>{{ generated }}</var></p>
 
 <table id="precise">
