layout: fix <strong>

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
       h2 {color:#900;font-size:1.5em;padding:.5em;text-align:center;}
       p {margin-bottom:1em;text-align:center;}
       var {font-weight:bold;}
+      strong {font-weight: bold;}
       table {border-collapse:collapse;border:1px solid #ddd;}
       th, td {border-bottom:1px solid #ddd;padding:.5em;}
       th {background-color:#900;color:#eee;border:1px solid #ddd;}
