list number of migrated tools

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
 </p>
 
 <p>Total tools still running on the Grid Engine: <var>{{ tools|count }}</var></p>
+<p>Tools that migrated in the last week: <var>{{ migrated|count }}</var></p>
 <p>Last updated: <var>{{ generated }}</var></p>
 
 <table id="precise">
