--- a/templates/tool.html
+++ b/templates/tool.html
@@ -24,6 +24,10 @@
     <tr>
       <td rowspan="{{ tool_data.jobs|count }}" id="{{ tool_name }}" class="tool-name">
         {{ tool_name }}
+        {% if tool_data.disabled %}
+          (grid access disabled)
+        {% endif %}
+
         <div class='members'>
           members:
           <ul>
